// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifExpertApp Test Debe mostrar la lista de categorias 1`] = `
<Fragment>
  <h2>
    GiftExperApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One punch"
      key="One punch"
    />
    <GifGrid
      category="Dragon ball"
      key="Dragon ball"
    />
  </ol>
</Fragment>
`;

exports[`GifExpertApp Test Reenderizando el componente 1`] = `
<Fragment>
  <h2>
    GiftExperApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
